# blessdog

./: .gitignore  README.md  pyproject.toml
phase1_osc/: __init__.py  __main__.py  cli.py  clips.py  connection.py  devices.py  discovery.py  errors.py  scenes.py  tracks.py  transport.py  types.py
scripts/: check_environment.sh  install_abletonosc.sh
tests/: conftest.py  mock_osc_server.py  test_connection.py  test_devices.py  test_tracks.py  test_transport.py
